--- a/CSS/Style-quienes-somos.css
+++ b/CSS/Style-quienes-somos.css
@@ -27,6 +27,8 @@ header {
 }
 
 header h1 {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 2rem;
   text-align: left;
   width: 100%;
@@ -213,7 +215,7 @@ header h1 {
 
 .miembro img {
   width: 100%;
-  height: 280px;
+  height: 480px;
   object-fit: cover;
   border-radius: 14px;
   margin-bottom: 12px;
